--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-scale": "^3.0.0",
+    "d3-selection": "^1.4.0",
     "html-to-react": "^1.3.4",
     "lz-string": "1.4.4",
     "react": "^16.8.6",
